@@ -1,5 +1,5 @@
 (defproject cmt "0.1.0"
-  :description "cmt"
+  :description "cgen"
   :url "http://example.com/FIXME" ; Change me - optional
   :license {:name "MIT License"
             :url "https://opensource.org/licenses/MIT"}
@@ -23,7 +23,7 @@
                  ;; Active JDBC drivers (MySQL, PostgreSQL, SQLite)
                  [mysql/mysql-connector-java "8.0.33"]
                  [org.postgresql/postgresql "42.7.11"]
-                 [org.xerial/sqlite-jdbc "3.53.1.0"]
+                 [org.xerial/sqlite-jdbc "3.53.2.0"]
                  ;; Optional JDBC drivers (uncomment if needed)
                  ;; [com.microsoft.sqlserver/mssql-jdbc "12.8.1.jre11"]   ; SQL Server
                  ;; [com.h2database/h2 "2.2.224"]                        ; H2
@@ -35,14 +35,14 @@
                  [ring/ring-devel "1.15.4"]
                  [ring/ring-codec "1.3.0"]]
   :main cmt.core
-  :plugins [[lein-ancient "0.7.0"]
+  :plugins [[lein-ancient "1.0.0"]
             [lein-pprint "1.3.2"]]
   :uberjar-name "cmt.jar"
   :target-path "target/%s"
   :ring {:handler cmt.core
          :auto-reload? true
          :auto-refresh? false}
-  :resource-paths ["shared" "resources"]
+  :resource-paths ["resources"]
   :aliases {"migrate"  ["run" "-m" "cmt.migrations/migrate" "--"]
             "rollback" ["run" "-m" "cmt.migrations/rollback" "--"]
             ;; Forward any extra args to the seeder fn, e.g.:
@@ -51,6 +51,11 @@
             ;;   lein database :pg      ; postgres (:pg)
             ;;   lein database localdb  ; sqlite (:localdb)
             "database" ["run" "-m" "cmt.models.cdb/database" "--"]
+            ;; Seed all tables except users
+            ;;   lein seed-non-users
+            ;;   lein seed-non-users pg
+            ;;   lein seed-non-users localdb
+            "seed-non-users" ["run" "-m" "cmt.models.cdb/seed-non-users" "--"]
             "scaffold" ["run" "-m" "cmt.engine.scaffold"]
             ;; Convert SQLite migrations to MySQL/PostgreSQL
             ;;   lein convert-migrations mysql        ; default (mysql)
@@ -67,9 +72,11 @@
             ;; Generate/remove handler skeleton (controller, model, view)
             ;;   lein gen-handler reports          ; create
             ;;   lein gen-handler reports remove   ; remove
-            "gen-handler" ["run" "-m" "cmt.gen.handler" "--"]}
+             "gen-handler" ["run" "-m" "cmt.gen.handler" "--"]}
   :profiles {:uberjar {:aot :all
                        :main cmt.core
-                       :jvm-opts ["-Dclojure.compiler.direct-linking=true"]}
+                       :jvm-opts ["-Dclojure.compiler.direct-linking=true"
+                                  "--enable-native-access=ALL-UNNAMED"]}
              :dev {:source-paths ["src" "dev"]
-                   :main cmt.dev}})
+                   :main cmt.dev
+                   :jvm-opts ["--enable-native-access=ALL-UNNAMED"]}})
